--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Ignore built files
-/storybook-static
+# Ignore development file
 .idea/
 .yarn/
