--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /server/node_modules
 /.pnp
 .pnp.js
+.pnp.cjs
 
 # testing
 /coverage
@@ -29,3 +30,4 @@ yarn-error.log*
 .yarn/
 /server/public
 *backup
+/mdb-data
