--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "babel-plugin-named-exports-order": "^0.0.2",
     "prettier": "2.8.3",
     "prop-types": "^15.8.1",
+    "storybook-docs-toc": "^1.7.0",
+    "styled-components": "^5.3.6",
     "webpack": "^5.75.0"
   },
   "proxy": "http://localhost:3001"
