--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,8 +10,7 @@ services:
       depends_on:
         - server
       volumes:
-        - ./client:/client/
-        - client-node-modules:/client/node_modules
+        - ./client:/client
       networks:
         - frontend
 
