fixes applied for running install prior to running client

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,6 +9,7 @@ services:
         - "3000:3000"
       depends_on:
         - server
+      command: sh /client/start.sh
       volumes:
         - ./client:/client
       networks:
